--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,3 +33,29 @@ body,input,button{
     padding-right: 15px;
 
 }
+
+#gmail,#imagenes{
+    padding-left: 15px;
+}
+
+.iconos{
+    padding: 4px;
+}
+
+a,button:hover{
+    cursor: pointer;
+}
+
+#redondo{
+    -webkit-background-size: 32px 32px;
+    background-size: 32px 32px;
+    border: 0;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    margin: 0;
+    position: relative;
+    height: 32px;
+    width: 32px;
+    z-index: 0;
+    margin-top: -4px;
+}
