--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,19 +18,21 @@ body,input,button{
     color: #222;
 }
 #nav{
-    display: flex;
+    display: block;
     align-items: center;
-    padding: 6px;
+    padding: 6px 6px 6px 100%;
     flex-grow: 1;
     position: relative;
     float: right;
     padding-right: 4px;
+    min-width: 320px;
 }
 .itemCont{
     font: 13px/27px Arial,sans-serif;
     color:  rgba(0,0,0,0.87);;
     display: inline-block;
     padding-right: 15px;
+    
 
 }
 
@@ -58,4 +60,24 @@ a,button:hover{
     width: 32px;
     z-index: 0;
     margin-top: -4px;
+}
+
+.googleLogo{
+    max-height: 230px;
+    position: relative;
+    text-align: center;
+    margin-left: 40px;
+    margin-right: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    display: block;
+}
+#fotoLogo{
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
+    object-position: center bottom;
+    width: auto;
+    vertical-align: bottom;
 }
